--- a/DOMexercises/index.css
+++ b/DOMexercises/index.css
@@ -11,7 +11,7 @@ body {
     color: white;
     font-family: Arial, Helvetica, sans-serif;
     padding: 25px;  
-    background-color: black;
+    background-color: #000;
 }
 
 .navbar-info {
